--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
@@ -5,36 +5,34 @@
           {{ range .Data.Pages }}
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 masonry-item">
                   <div class="box-masonry">
+                      <a href="{{ .Permalink }}">
                       {{ if and (isset .Params "image") .Params.image }}
                         {{ if eq .Params.showonlyimage true }}
-                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay">
+                        <div class="box-masonry-image with-hover-overlay">
                         {{ else }}
-                        <a href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay with-hover-icon">
+                        <div href="{{ .Permalink }}" title="" class="box-masonry-image with-hover-overlay with-hover-icon">
                         {{ end }}
                             <img src="{{.Params.image | absURL}}" alt="" class="img-responsive">
-                        </a>
+                        </div>
                       {{ end }}
                       {{ if eq .Params.showonlyimage true }}
                       <div class="box-masonry-hover-text-header">
-                      <a href="{{ .Permalink }}" class="box-masonry-show-only-image-full-link"></a>
-
                       {{ else }}
                       <div class="box-masonry-text">
                       {{ end }}
-                      <a href="{{ .Permalink }}">
                           <h4>{{ .Title }}</h4>
                           <div class="box-masonry-description">
                             <p class="box-masonry-description-date text-muted text-uppercase">{{ .Date.Format "January 2, 2006" }}</p>
                             <p>
                                 {{ if .Description }}
-                                  {{ .Description }}
+                                  {{ .Description | plainify}}
                                 {{ else }}
-                                  {{ .Summary }}
+                                  {{ .Summary | plainify }}
                                 {{ end }}
                             </p>
                           </div>
-                      </a>
                       </div>
+                      </a>
                   </div>
               </div>
           {{ end }}
