--- a/site/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
@@ -1,17 +1,22 @@
 {{ define "main" }}
 <div class="col-12 col-md-8 col-lg-9 content-column white-background">
-  {{ partial "mobile_nav_toggle.html" . }}
-  <div class="row">
-    <div class="col-lg-8">
-      <div class="content-column-content">
-         <h1>{{ .Title }}</h1>
-          {{ if .Page.Params.viewer }}
-            <div id="viewer" attr-src="{{ .Page.Params.viewer }}"></div>
-          {{ end }}
-         {{ .Content }}
-         {{ template "_internal/disqus.html" . }}
-      </div>
+    {{ partial "mobile_nav_toggle.html" . }}
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="content-column-content">
+                <h1>{{ .Title }}</h1>
+                {{ if .Page.Params.viewer }}
+                <div id="viewer" attr-src="{{ .Page.Params.viewer }}"></div>
+                {{ end }}
+                {{ .Content }}
+                <div class="text-muted text-small">Tags:
+                    {{ range .Page.Params.tags }}
+                    <a href="/portfolio?tag={{ . }}">{{ . }}</a>
+                    {{ end }}
+                </div>
+                {{ template "_internal/disqus.html" . }}
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 {{ end }}
