--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/sidebar.html
@@ -9,8 +9,8 @@
         <li><a href="{{ absURL .url }}">{{ .name }}</a></li>
       {{ end }}
     </ul>
+    {{ partial "tags_in_sidebar.html" . }}
     {{ partial "social_buttons_in_sidebar.html" . }}
-
     <div class="copyright">
       <p class="credit">
         {{ with .Site.Params.copyright }}
