Use tag in home page.

--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/tags_in_sidebar.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/tags_in_sidebar.html
@@ -13,7 +13,7 @@
   {{ end }}
   <div>
       {{ range $s | uniq }}
-        <a href="/portfolio?tag={{ . }}" class="text-gray-light">{{ . }}</a>
+        <a href="/?tag={{ . }}" class="text-gray-light">{{ . }}</a>
       {{ end }}
   </div>
 </div>
