--- a/site/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
@@ -11,7 +11,7 @@
                 {{ .Content }}
                 <div class="text-muted text-small">Tags:
                     {{ range .Page.Params.tags }}
-                    <a href="/portfolio?tag={{ . }}">{{ . }}</a>
+                    <a href="/?tag={{ . }}">{{ . }}</a>
                     {{ end }}
                 </div>
                 {{ template "_internal/disqus.html" . }}
