--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/social_buttons_in_contact.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/social_buttons_in_contact.html
@@ -44,9 +44,9 @@
     <i class="fa fa-youtube"></i>
   </a>
   {{end}}
-  {{ with .Site.Params.social.whatsapp }}
+  {{ with .Site.Params.social.telegram }}
   <a href="{{ . }}" data-animate-hover="pulse" class="external">
-    <i class="fa fa-whatsapp"></i>
+    <i class="fa fa-telegram"></i>
   </a>
   {{end}}
 </p>
