--- a/site/themes/hugo-creative-portfolio-theme/static/css/style.green.css
+++ b/site/themes/hugo-creative-portfolio-theme/static/css/style.green.css
@@ -362,8 +362,9 @@ SIDEBAR + RIGHT COLUMN
   color: #555555;
 }
 .sidebar-menu li:before {
-  font-family: 'FontAwesome';
-  content: '\f105';
+  font-family: 'Font Awesome 5 Free';
+  content: '\f054';
+  font-weight: 900;
   margin: 0 5px 0 -15px;
   color: #999999;
 }
@@ -414,8 +415,9 @@ SIDEBAR + RIGHT COLUMN
   list-style-type: none;
 }
 .content-column-content ul li:before {
-  font-family: 'FontAwesome';
-  content: '\f105';
+  font-family: 'Font Awesome 5 Free';
+  content: '\f054';
+  font-weight: 900;
   margin: 0 5px 0 -15px;
   color: #2b7551;
 }
@@ -945,8 +947,9 @@ a:active {
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  font-family: 'FontAwesome';
-  content: '\f105';
+  font-family: 'Font Awesome 5 Free';
+  content: '\f054';
+  font-weight: 900;
   text-align: center;
   font-size: 50px;
   color: #555555;
