--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/social_buttons_in_contact.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/social_buttons_in_contact.html
@@ -46,7 +46,7 @@
   {{end}}
   {{ with .Site.Params.social.telegram }}
   <a href="{{ . }}" data-animate-hover="pulse" class="external">
-    <i class="fa fa-telegram"></i>
+    <i class="fab fa-telegram-plane"></i>
   </a>
   {{end}}
 </p>
