--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/attribution.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/attribution.html
@@ -1,2 +1,3 @@
+Template by <a href="https://bootstrapious.com/free-templates" class="external">Bootstrapious.com</a>
 <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
-ported to Hugo by <a href="https://github.com/kishaningithub">Kishan B</a>
+&amp; ported to Hugo by <a href="https://github.com/kishaningithub" class="external">Kishan B</a>. Mixed and customised with some elements from <a href="https://github.com/puresyntax71/hugo-theme-chunky-poster" class="external">Chunky poster</a> theme by <a href="https://mikelis.dev/" class="external">Mikelis J.</a>
