--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/tags_in_sidebar.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/tags_in_sidebar.html
@@ -1,7 +1,6 @@
-<div class="tags">
-  <div class="text-muted">Tags:</div>
+<div class="tags mb-5">
   {{ $page := .GetPage "portfolio" }}
-  {{ $s := slice "" }}
+  {{ $s := slice }}
   {{ range $page.Pages }}
 
   {{ if .Params.tags }}
@@ -11,9 +10,14 @@
   {{ end }}
 
   {{ end }}
-  <div>
-      {{ range $s | uniq }}
-        <a href="/?tag={{ . }}" class="text-gray-light">{{ . }}</a>
-      {{ end }}
-  </div>
+  Tags: &nbsp;
+  {{ range $s | uniq }}
+    {{ if . }}
+    <a href="/?tag={{ . }}" class="badge badge-pill bg-light text-body border mr-1 my-badge">
+      <i class="fas fa-tag mr-1"></i>
+      {{ . }}
+    </a>
+    {{ end }}
+  {{ end }}
+
 </div>
