--- a/src/css/my.scss
+++ b/src/css/my.scss
@@ -218,9 +218,13 @@
 }
 
 .box-masonry {
+    &-description-date {
+      color: #8fa6b2;
+    }
     .box-masonry-text, .box-masonry-hover-text-header {
         h4 {
             text-transform: unset !important;
+            font-size: calc(1.29375rem + .125vw);
         }
         p + p {
             color: #0c344b !important;
@@ -248,5 +252,24 @@
     margin-bottom: 15px;
     &:hover {
         background-color: $gray-500;
+    }
+}
+
+a.no-hover-underline:hover {
+  text-decoration: none;
+}
+
+a.no-hover-underline:focus {
+  text-decoration: none;
+}
+
+a.my-badge {
+  border-radius: 1rem;
+  padding-right: .6em;
+  padding-left: .6em;
+  &:hover {
+    color: inherit;
+    outline: 0;
+    background-color: #e6e6e6!important;
     }
 }
