--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/portfolio.html
@@ -1,5 +1,11 @@
 <div class="col-xs-12 col-md-9 content-column">
     {{ partial "mobile_nav_toggle.html" . }}
+    {{ if .Data.Term }}
+        <a href="/"  class="badge badge-pill bg-light text-body border mr-1 my-badge clear-tag-button text-small">
+            {{ .Data.Term}}
+            <i class="fas fa-times-circle ml-1"></i>
+        </a>
+    {{ end }}
     <div class="grid">
         <div class="row">
           {{ range .Data.Pages }}
