--- a/site/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
@@ -6,3 +6,12 @@
 {{ if .Site.Params.analytics.matomo }}
   {{ partial "_analytics/matomo.html" . }}
 {{ end }}
+
+<link rel="stylesheet" href="/photoswipe/photoswipe.css">
+<link rel="stylesheet" href="/photoswipe/default-skin/default-skin.css">
+
+<script src="/photoswipe/photoswipe.min.js"></script>
+
+<!-- UI JS file -->
+<script src="/photoswipe/photoswipe-ui-default.min.js"></script>
+
