--- a/site/themes/hugo-creative-portfolio-theme/layouts/_default/_markup/render-image.html
+++ b/site/themes/hugo-creative-portfolio-theme/layouts/_default/_markup/render-image.html
@@ -1,6 +1,11 @@
+{{ $dest := replace (printf "%s" (.Destination | safeURL)) "/img/" "" }}
+{{ $dest := replace $dest "/uploads/" "" }}
+
+{{ $image := resources.GetMatch $dest }}
+{{ $small := $image.Resize "480x" }}
+{{ $big := $image.Fit "1280x1280" }}
 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="photoswipe-image">
-    <a href="{{ .Destination | safeURL }}" itemprop="contentUrl" data-size="600x400">
-        <img src="{{ .Destination | safeURL }}" itemprop="thumbnail" alt="{{ .Text }}"/>
+    <a href="{{ $big.Permalink | safeURL }}" itemprop="contentUrl" data-size="{{ $big.Width }}x{{ $big.Height }}">
+        <img src="{{ $small.Permalink | safeURL }}" itemprop="thumbnail" alt="{{ .Text }}"/>
     </a>
-<!--        <figcaption itemprop="caption description">Image caption</figcaption>-->
 </figure>
